--20130425
alter table permisos add column cheques_administrador boolean not null default false;
--20130415
alter table cuentabancaria_movimientos add column conciliado boolean not null default false;
--20130325
alter table recibo add column por_conciliar boolean not null default false;
alter table recibo add column cliente_id integer;
alter table recibo add constraint fk_recibo_cliente_id foreign key (cliente_id) references cliente (id);
--20130316
alter table usuario_acciones add column accion character(1) not null;
alter table usuario_acciones alter column accion drop default;
--20130311
CREATE TABLE nota_debito_proveedor (
  id serial NOT NULL,
  numero numeric(12,0) NOT NULL,
  fecha_nota_debito date NOT NULL,
  fecha_carga timestamp with time zone NOT NULL DEFAULT now(),
  importe numeric(12,2) NOT NULL,
  usuario_id integer NOT NULL,
  proveedor_id integer NOT NULL,
  observacion character varying(200),
  gravado numeric(12,2) NOT NULL DEFAULT 0,
  no_gravado numeric(12,2) NOT NULL DEFAULT 0,
  iva10 numeric(12,2) NOT NULL DEFAULT 0,
  iva21 numeric(12,2) NOT NULL DEFAULT 0,
  otros_ivas numeric(12,2) NOT NULL DEFAULT 0,
  anulada boolean NOT NULL DEFAULT false,
  impuestos_recuperables numeric(12,2) NOT NULL DEFAULT 0,
  remesa_id integer,
  tipo character(1) NOT NULL,
  CONSTRAINT pk_nota_debito_proveedor PRIMARY KEY (id),
  CONSTRAINT fk_nota_debito_proveedor_proveedor FOREIGN KEY (proveedor_id) REFERENCES proveedor (id),
  CONSTRAINT fk_nota_debito_proveedor_remesa FOREIGN KEY (remesa_id) REFERENCES remesa (id),
  CONSTRAINT fk_nota_debito_proveedor_usuario FOREIGN KEY (usuario_id) REFERENCES usuario (id),
  CONSTRAINT unq_nota_debito_proveedor_proveedor_numero UNIQUE (proveedor_id, numero)
);
CREATE TABLE detalle_nota_debito_proveedor (
  id serial NOT NULL,
  nota_debito_proveedor_id integer NOT NULL,
  concepto character varying(200) NOT NULL,
  importe numeric(12,2) NOT NULL,